--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 
   <!-- Meta Title & Description (SEO) -->
   <title>The Science Behind Snow Day Predictions: How Accurate Are They?</title>
-  <meta name="description" content="Discover how snow day predictions work, what affects their accuracy, and practical tips to interpret them. A clear, simple guide on snow day predictors and forecasting." />
+  <meta name="description" content="Discover how snow day predictions work, what affects their accuracy, and practical tips to interpret them. A clear, simple guide on snow day predictors." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.example.com/the-science-behind-snow-day-predictions" />
+  <link rel="canonical" href="https://science-behind-snow-day-predictions.vercel.app" />
+  <meta name="google-site-verification" content="Lbv3ePm4J0364thTwmatZ1OaLQ4Q5PwV04It2zkbvk0" />
 
   <!-- Meta robots -->
   <meta name="robots" content="index, follow" />
@@ -431,4 +432,5 @@
     updateProgress();
   </script>
 </body>
+
 </html>
